# immich-cli

./: Cargo.toml  README.md  config.example.toml
scripts/: build_places_index.sh
skills/family-album/: family-album.md
src/: client.rs  config.rs  description_search.rs  lib.rs  llm.rs  main.rs  models.rs  path_map.rs  places.rs
src/commands/: ask.rs  dedup.rs  info.rs  mod.rs  search.rs  update_descriptions.rs
tests/: http_integration.rs
