[package]
name = "immich-cli"
version = "0.1.0"
edition = "2021"
description = "Custom CLI for Immich that maps external library assets to local NFS paths"
license = "Apache-2.0"

[lib]
name = "immich_cli"
path = "src/lib.rs"

[[bin]]
name = "immich-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json"], default-features = false }
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
